--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/*basic setups*/
 * {
     margin: 0;
     padding: 0;
@@ -12,8 +13,9 @@ html {
 body {
     font-size: 1.6rem;
 }
+/*end of basic setups*/
 
-
+/*header section*/
 .header {
     display: flex;
     align-items: center;
@@ -21,7 +23,7 @@ body {
     gap: 2rem;
     justify-content: space-between;
     padding: 0.7rem 4rem;
-    background-color: rgb(246, 239, 90);
+    background-color: rgb(189, 227, 123);
 }
 
 .hlinks {
@@ -41,24 +43,27 @@ body {
     align-items: center;
     gap: 4rem;
 }
+/* end of header section*/
+
+/*hero sections*/
 .hero {
-    background-color:  rgb(246, 239, 90);
-    height: 39vh;
+    background-color: rgb(189, 227, 123);
+    height: 30vh;
 }
 
 /*end of hero*/
 
 /*action area*/
 .actionarea {
-height: 18vh;
-background-color: rgb(239, 241, 241);
+height: 12vh;
+background-color: rgb(250, 237, 4);
 }
 
 /*end of action area*/
 
 /*footer*/
 .footer {
-    height: 37vh;
-    background-color:  rgb(246, 239, 90);
+    height: 52.9vh;
+    background-color: rgb(189, 227, 123);
 }
 /*end of footer*/
