--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
     gap: 2rem;
     justify-content: space-between;
     padding: 0.7rem 3rem;
-    background-color: rgb(189, 227, 123);
+    background-color: rgb(126, 240, 69);
 }
 
 .hlinks {
@@ -48,30 +48,15 @@ body {
 /* end of header section*/
 
 /*hero sections*/
-.hero {
-
-    background-color: rgb(189, 227, 123);
-    height: 30vh;
-    font-weight: 600;
-    font-size: 2rem;
+.heroe {
+    background-color: rgb(126, 240, 69);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30vh;      
 }
 
-.computer-action {
-    padding: 0rem 55rem;
-    padding-top: 6rem;
-    text-align: center;
-    line-height: 3rem;
-}
 
-.image-container {
-    height: 13rem;
-    width: 13rem;
-}
-
-.image-container img {
-    height: 100%;
-    width: 100%;
-}
 
 
 /*end of hero*/
@@ -80,22 +65,79 @@ body {
 .actionarea {
     height: 12vh;
     background-color: rgb(250, 237, 4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.choice-displayer {
+    font-size: 5rem;
     font-weight: 600;
-    font-size: 2rem;
+}
+
+.action-display h1 {
     text-align: center;
-    line-height: 3rem;
+    align-content: center;
 }
-.player-action {
-    padding: 0rem 55rem;
-    padding-top: 12rem;
-}
+/*.action-display for this section displayed in the footer as they share qualities).
 
 /*end of action area*/
 
 /*footer*/
 .footer {
-    height: 52.9vh;
-    background-color: rgb(189, 227, 123);
+    height: 20.9vh;
+    background-color: rgb(126, 240, 69);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
 }
 
+.action-display {
+    align-items: center; 
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.symbols {
+    width: 13rem;
+    height: 13rem;
+    border: dashed black 3px;
+    font-weight: 500;
+    text-align: center;
+    font-size: 8rem;
+}
+
+
 /*end of footer*/
+
+/*last one*/
+.last-one {
+    height: 30vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 35rem;
+    background-color: rgb(126, 240, 69);
+}
+
+.choices {
+    width: 15rem;
+    height: 15rem;
+    
+}
+
+.choices button {
+    width: 100%;
+    height: 100%;
+}
+
+.decision {
+    font-size: 2rem;
+    font-weight: 550;
+}
+
+.symbol {
+    font-size: 8rem;
+}
+
+/*end of last one*/
